--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -4,6 +4,11 @@
     - standard_ubuntu
     - ansible
 
+- hosts: lms
+  roles:
+    - standard_ubuntu
+    - lms
+
 - hosts: zoneminder
   roles:
     - standard_ubuntu
