Fixed two configuration errors in ansible example files

--- a/ansible/roles/hass/files/home/hass/.homeassistant/configuration.yaml
+++ b/ansible/roles/hass/files/home/hass/.homeassistant/configuration.yaml
@@ -52,13 +52,10 @@ sensor:
 tts:
   platform: google
 
-# beelink-tv1
+# beelink-tv1 and tv2
 media_player:
   - platform: kodi
     host: 192.168.28.74
-
-# beelink-tv2
-media_player:
   - platform: kodi
     host: 192.168.28.75
 
